--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
-    <label id="countlabel">0</label>
-    <div class="containerBtn">
-        <button id="decreaseBtn" class="btn">Decrease</button>
-        <button id="resetBtn" class="btn">Reset</button>
-        <button id="increaseBtn" class="btn">Increase</button>
-    </div>
 
+    <h1 id="h1">Heading</h1>
+    <h2 class="jy"> This is Pujitha </h2>
+    <h3 class="jy"> Studying Btech </h3>
+    <h4> Parul University </h4>
+    <h5 class="cls"> Vadodara</h5>
+    <script>
+
+        console.log('From script Tag');
+    </script>
+  
+
+    <script src="dom.js"></script>
+    <script src="array.js"></script>
+    <script src="conditional_statement.js"></script>
+    <script src="datatype.js"></script>
+    <script src="exceptions.js"></script>
+    <script src="function.js"></script>
+    <script src="object.js"></script>
     <script src="script.js"></script>
+    <script src="strings.js"></script>
+
+    
 </body>
 </html>
